RESOLVED FIXED206291
REGRESSION (r252064): [ Mac iOS ] storage/websql/statement-error-callback.html is timing out flakily
https://bugs.webkit.org/show_bug.cgi?id=206291
Summary REGRESSION (r252064): [ Mac iOS ] storage/websql/statement-error-callback.htm...
Truitt Savell
Reported 2020-01-15 08:54:06 PST
storage/websql/statement-error-callback.html Description: This test is timing out a lot on Catalina wk2 release and iOS. This started timing out around 252121 according to history. History: https://results.webkit.org/?suite=layout-tests&test=webgpu%2Fwhlsl%2Fdot-expressions.html
Attachments
Patch (4.68 KB, patch)
2020-01-28 13:56 PST, Chris Dumez
no flags
Patch (5.53 KB, patch)
2020-01-28 14:32 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-15 08:54:25 PST
Truitt Savell
Comment 2 2020-01-15 09:15:58 PST
--- /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/storage/websql/statement-error-callback-expected.txt +++ /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/storage/websql/statement-error-callback-actual.txt @@ -1,15 +1,7 @@ CONSOLE MESSAGE: line 64: Web SQL is deprecated. Please use IndexedDB instead. CONSOLE MESSAGE: line 67: Exception in statement error callback -This test confirms that a transaction is immediately rolled back if and only if a statement's error callback throws an exception, returns true, or doesn't return any value. -PASS - the transaction error callback was invoked. -PASS - the transaction error callback was invoked. -PASS - the transaction error callback was invoked. -PASS - the transaction error callback was invoked. -PASS - the transaction error callback was invoked. -PASS - the transaction error callback was invoked. -PASS - the transaction success callback was invoked. -PASS - the transaction success callback was invoked. -PASS - the transaction success callback was invoked. -PASS - the transaction success callback was invoked. -Test Complete +#PID UNRESPONSIVE - WebKitTestRunner (pid 31795) +FAIL: Timed out waiting for notifyDone to be called +#EOF +#EOF
Truitt Savell
Comment 3 2020-01-15 09:40:54 PST
This is not reproducing locally for me with iterations
Truitt Savell
Comment 4 2020-01-15 09:45:13 PST
Truitt Savell
Comment 5 2020-01-15 09:51:39 PST
Marked this as timing out while investigating in: https://trac.webkit.org/changeset/254573/webkit
Alexey Proskuryakov
Comment 6 2020-01-15 22:52:29 PST
For this test, the history clearly points to r252064.
Chris Dumez
Comment 7 2020-01-28 13:56:22 PST
Chris Dumez
Comment 8 2020-01-28 14:32:58 PST
Alexey Proskuryakov
Comment 9 2020-01-28 16:16:10 PST
Comment on attachment 389064 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=389064&action=review > Source/WebCore/ChangeLog:10 > + task was the source of the flaky timeouts & crashes. Queueing this event loop task in & crashes?
Maciej Stachowiak
Comment 10 2020-01-28 16:39:27 PST
Comment on attachment 389064 [details] Patch r=me
Chris Dumez
Comment 11 2020-01-28 16:56:52 PST
(In reply to Alexey Proskuryakov from comment #9) > Comment on attachment 389064 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=389064&action=review > > > Source/WebCore/ChangeLog:10 > > + task was the source of the flaky timeouts & crashes. Queueing this event loop task in > > & crashes? Yes, locally I saw flaky crashes.
WebKit Commit Bot
Comment 12 2020-01-28 17:39:51 PST
Comment on attachment 389064 [details] Patch Clearing flags on attachment: 389064 Committed r255329: <https://trac.webkit.org/changeset/255329>
WebKit Commit Bot
Comment 13 2020-01-28 17:39:53 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 15 2020-01-29 14:16:21 PST
(In reply to Truitt Savell from comment #14) > This issue is still occurring according to history. > > https://results.webkit.org/?suite=layout-tests&suite=layout- > tests&test=inspector%2Fcanvas%2FresolveContext-webgpu. > html&test=storage%2Fwebsql%2Fstatement-error-callback.html :( It was no longer reproducing locally even though it was easily reproducible on my machine before the fix. I guess I may have made it less flaky but it is still flaky. Anyway, I will investigate further.
Chris Dumez
Comment 16 2020-01-29 16:36:17 PST
(In reply to Chris Dumez from comment #15) > (In reply to Truitt Savell from comment #14) > > This issue is still occurring according to history. > > > > https://results.webkit.org/?suite=layout-tests&suite=layout- > > tests&test=inspector%2Fcanvas%2FresolveContext-webgpu. > > html&test=storage%2Fwebsql%2Fstatement-error-callback.html > > :( It was no longer reproducing locally even though it was easily > reproducible on my machine before the fix. I guess I may have made it less > flaky but it is still flaky. Anyway, I will investigate further. I am trying various things but I can no longer reproduce the flakiness locally after my change..
Chris Dumez
Comment 17 2020-01-30 09:35:26 PST
Note You need to log in before you can comment on or make changes to this bug.