Source/WebCore/Modules/webdatabase/SQLTransaction.cpp
@@ -128,9 +128,7 @@ void SQLTransaction::performPendingCallback()
 void SQLTransaction::notifyDatabaseThreadIsShuttingDown()
 {
     callOnMainThread([this, protectedThis = makeRef(*this)]() mutable {
-        m_database->document().eventLoop().queueTask(TaskSource::Networking, [this, protectedThis = protectedThis.copyRef()]() mutable {
-            callErrorCallbackDueToInterruption();
-        });
+        callErrorCallbackDueToInterruption();
     });
 
     m_backend.notifyDatabaseThreadIsShuttingDown();
